--- a/Resonant.ipynb
+++ b/Resonant.ipynb
@@ -142,16 +142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<JaggedArray [[9.320822 1.0531727] [12.701347 9.697101 1.5778472] [13.613359 0.83395797] ... [9.099596] [10.143419] [10.332176]] at 0x7f3f9d948710>"
+       "<JaggedArray [[9.320822 1.0531727] [12.701347 9.697101 1.5778472] [13.613359 0.83395797] ... [8.357409] [12.63692] [11.640583]] at 0x7fe230babe48>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,14 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "bcands['e1'] = electrons[bcands['l1Idx']]\n",
     "bcands['e2'] = electrons[bcands['l2Idx']]\n",
     "bcands['k'] = tracks[bcands['kIdx']]\n",
-    "bcands['p4fit'] = uproot_methods.TLorentzVectorArray.from_ptetaphi(\n",
+    "bcands['p4fit'] = uproot_methods.TLorentzVectorArray.from_ptetaphim(\n",
     "    bcands['fit_pt'], bcands['fit_eta'], bcands['fit_phi'], bcands['fit_mass']\n",
     ")"
    ]
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -328,17 +328,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "b_pf = bcands.e1.isPF & bcands.e2.isPF\n",
-    "b_lpt = bcands.e1.isLowPt & bcands.e2.isLowPt & (bcands.e1.mvaId > 3.96) & (bcands.e1.mvaId > 3.96)"
+    "b_lpt = bcands.e1.isLowPt & bcands.e2.isLowPt & (bcands.e1.mvaId > 3.96) & (bcands.e2.mvaId > 3.96)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,18 +370,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/afs/cern.ch/work/m/mverzett/miniconda3/lib/python3.7/site-packages/uproot_methods/classes/TLorentzVector.py:196: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  return self._trymemo(\"mass\", lambda self: self.awkward.numpy.sqrt(self.mag2))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for name, tab, sel in [('pf', bcands_pf, b_selection & b_pf), ('lpt', bcands_lpt, b_selection & b_lpt)]:\n",
     "    df = dfs[name]\n",
@@ -397,8 +388,107 @@
     "    df['Blxy_sig'] = (tab.l_xy / tab.l_xy_unc)\n",
     "    df['Bmll'] = tab.mll_fullfit\n",
     "    df['Bmll_raw'] = tab.mll_raw\n",
-    "    df['Bmass'] = tab.p4fit.mass\n",
+    "    df['Bmass'] = tab.fit_mass\n",
+    "    df['Bmass_raw'] = tab.p4.mass\n",
     "    df['nB'] = sel.sum()[sel.sum() != 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs['lpt'].to_hdf('out_data.h5', 'lpt', mode = 'a')\n",
+    "dfs['pf'].to_hdf('out_data.h5', 'pf', mode = 'a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(74, 14)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat((dfs['lpt'], dfs['pf'])).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0.], dtype=float32)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tab.p4fit.mass - tab.fit_mass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['fit_mass',\n",
+       " 'fit_eta',\n",
+       " 'fit_pt',\n",
+       " 'kIdx',\n",
+       " 'charge',\n",
+       " 'chi2',\n",
+       " 'fit_phi',\n",
+       " 'l_xy',\n",
+       " 'l_xy_unc',\n",
+       " 'mll_fullfit',\n",
+       " 'l1Idx',\n",
+       " 'mll_raw',\n",
+       " 'l2Idx',\n",
+       " 'fit_cos2D',\n",
+       " 'svprob',\n",
+       " 'p4',\n",
+       " '__fast_pt',\n",
+       " '__fast_eta',\n",
+       " '__fast_phi',\n",
+       " '__fast_mass',\n",
+       " 'e1',\n",
+       " 'e2',\n",
+       " 'k',\n",
+       " 'p4fit',\n",
+       " 'trg_mu']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tab.columns"
    ]
   },
   {
@@ -406,10 +496,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dfs['lpt'].to_hdf('out_data.h5', 'lpt', mode = 'a')\n",
-    "dfs['pf'].to_hdf('out_data.h5', 'pf', mode = 'a')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
