--- a/Resonant.ipynb
+++ b/Resonant.ipynb
@@ -115,8 +115,8 @@
    "outputs": [],
    "source": [
     "nf = NanoFrame(\n",
-    "    '/eos/cms/store/cmst3/group/bpark/BParkingNANO_2019Sep10/ParkingBPH2/crab_data_Run2018D_part2/190910_082308/0001/BParkNANO_data_2019Sep10_1996.root',\n",
-    "    branches = branches\n",
+    "    '/eos/cms/store/group/cmst3/group/bpark/BParkingNANO_2019Sep12/ParkingBPH2/crab_data_Run2018B_part2/190912_183627/0000/BParkNANO_data_2019Sep12_1.root',\n",
+    "    #branches = branches\n",
     ")"
    ]
   },
@@ -126,11 +126,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "it = uproot.iterate(\n",
-    "    ['/eos/cms/store/cmst3/group/bpark/BParkingNANO_2019Sep10/ParkingBPH2/crab_data_Run2018D_part2/190910_082308/0001/BParkNANO_data_2019Sep10_1996.root'], \n",
-    "    'Events', branches=branches, entrysteps=10000, namedecode='ascii'\n",
-    ")\n",
-    "nf = NanoFrame(it.__next__())"
+    "# it = uproot.iterate(\n",
+    "#     ['/eos/cms/store/cmst3/group/bpark/BParkingNANO_2019Sep10/ParkingBPH2/crab_data_Run2018D_part2/190910_082308/0001/BParkNANO_data_2019Sep10_1996.root'], \n",
+    "#     'Events', branches=branches, entrysteps=10000, namedecode='ascii'\n",
+    "# )\n",
+    "# nf = NanoFrame(it.__next__())"
    ]
   },
   {
@@ -144,20 +144,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<JaggedArray [[9.320822 1.0531727] [12.701347 9.697101 1.5778472] [13.613359 0.83395797] ... [8.357409] [12.63692] [11.640583]] at 0x7fe230babe48>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "nf.array('Muon_pt')"
+    "evt = nf['event']"
    ]
   },
   {
@@ -198,11 +187,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "bcands = nf['BToKEE']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "right_evt = (evt == 1146968230)"
    ]
   },
   {
@@ -214,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,32 +306,422 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/afs/cern.ch/work/m/mverzett/miniconda3/lib/python3.7/site-packages/awkward/array/jagged.py:1031: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "/afs/cern.ch/work/m/mverzett/miniconda3/envs/pyrk/lib/python3.7/site-packages/awkward/array/jagged.py:1031: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
      ]
     }
    ],
    "source": [
-    "b_selection = (bcands.k.p4.pt > 3.) & (bcands.k.DCASig > 2) & (bcands.p4fit.pt > 3) & \\\n",
-    "    (bcands.svprob > 0.1) & (bcands.fit_cos2D > 0.999) & \\\n",
-    "    ((bcands.l_xy / bcands.l_xy_unc) > 8)"
+    "b_selection = (bcands.k.p4.pt > 3) & (bcands.k.DCASig > 2) & (bcands.p4.pt > 3) & \\\n",
+    "              (bcands.svprob > 0.1) & (bcands.cos2D > 0.999) & \\\n",
+    "              ((bcands.l_xy / bcands.l_xy_unc) > 6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b_selection[right_evt].any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "b_pf = bcands.e1.isPF & bcands.e2.isPF\n",
     "b_lpt = bcands.e1.isLowPt & bcands.e2.isLowPt & (bcands.e1.mvaId > 3.96) & (bcands.e2.mvaId > 3.96)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svpr = (bcands.svprob > 0.299063) & (bcands.svprob < 0.299363)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sel = bcands[right_evt][svpr[right_evt]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Row 202315>\n",
+      "k pt: 4.05078125\n",
+      "k DCA: 8.5390625\n",
+      "B pt: 17.585369110107422\n",
+      "SV prob: 0.29916275\n",
+      "fit_Cos2D: 0.99849975 False\n",
+      "cos2D: 0.9999188 True\n",
+      "l_xy sig: 685.94275\n",
+      "e1 PF: True e2 PF: True\n",
+      "e1 LPT: False e2 LPT: False\n",
+      "e1 MVA: 20.0 e2 MVA: 20.0\n",
+      "e1 Seed: 20.0 e2 Seed: 20.0\n",
+      "\n",
+      "\n",
+      "\n",
+      "<Row 202319>\n",
+      "k pt: 4.05078125\n",
+      "k DCA: 8.5390625\n",
+      "B pt: 17.585369110107422\n",
+      "SV prob: 0.29916275\n",
+      "fit_Cos2D: 0.99849975 False\n",
+      "cos2D: 0.99908334 True\n",
+      "l_xy sig: 685.94275\n",
+      "e1 PF: False e2 PF: True\n",
+      "e1 LPT: True e2 LPT: False\n",
+      "e1 MVA: 4.4662423 e2 MVA: 20.0\n",
+      "e1 Seed: 3.0745869 e2 Seed: 20.0\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for B in sel[0]:\n",
+    "    print(B)\n",
+    "    print('k pt:', B.k.p4.pt)\n",
+    "    print('k DCA:', B.k.DCASig)\n",
+    "    print('B pt:', B.p4fit.pt)\n",
+    "    print('SV prob:', B.svprob)\n",
+    "    print('fit_Cos2D:', B.fit_cos2D, B.fit_cos2D > 0.999)\n",
+    "    print('cos2D:', B.cos2D, B.cos2D > 0.999)    \n",
+    "    print('l_xy sig:', (B.l_xy / B.l_xy_unc))\n",
+    "    print('e1 PF:', B.e1.isPF, 'e2 PF:', B.e2.isPF)\n",
+    "    print('e1 LPT:', B.e1.isLowPt, 'e2 LPT:', B.e2.isLowPt)\n",
+    "    print('e1 MVA:', B.e1.mvaId, 'e2 MVA:', B.e2.mvaId)\n",
+    "    print('e1 Seed:', B.e1.unBiased, 'e2 Seed:', B.e2.unBiased)\n",
+    "    print('\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['BToKMuMu_fit_phi',\n",
+       " 'TriggerMuon_trgMuonIndex',\n",
+       " 'ProbeTracks_eta',\n",
+       " 'SV_pt',\n",
+       " 'Electron_dxy',\n",
+       " 'TrigObj_id',\n",
+       " 'ProbeTracks_vx',\n",
+       " 'Electron_phi',\n",
+       " 'Electron_vy',\n",
+       " 'Muon_triggerIdLoose',\n",
+       " 'nTriggerMuon',\n",
+       " 'PV_x',\n",
+       " 'Muon_pdgId',\n",
+       " 'TrigObj_l1iso',\n",
+       " 'BToKMuMu_mll_raw',\n",
+       " 'Muon_pfRelIso03_all',\n",
+       " 'HLT_Mu10p5_IP3p5',\n",
+       " 'TrigObj_l2pt',\n",
+       " 'BToKMuMu_mll_llfit',\n",
+       " 'Electron_isPF',\n",
+       " 'Muon_mediumId',\n",
+       " 'BToKEE_l2Idx',\n",
+       " 'Muon_dxyErr',\n",
+       " 'Muon_isTriggering',\n",
+       " 'L1_SingleMu22',\n",
+       " 'BToKMuMu_fit_eta',\n",
+       " 'Electron_unBiased',\n",
+       " 'SV_dlen',\n",
+       " 'fixedGridRhoFastjetAll',\n",
+       " 'BToKEE_pdgId',\n",
+       " 'ProbeTracks_isLostTrk',\n",
+       " 'Muon_phi',\n",
+       " 'BToKMuMu_mll_fullfit',\n",
+       " 'run',\n",
+       " 'Muon_ip3d',\n",
+       " 'ProbeTracks_isMatchedToSoftMuon',\n",
+       " 'SV_dlenSig',\n",
+       " 'TriggerMuon_pt',\n",
+       " 'ProbeTracks_charge',\n",
+       " 'BToKMuMu_l1Idx',\n",
+       " 'TriggerMuon_pdgId',\n",
+       " 'Muon_pfIsoId',\n",
+       " 'BToKEE_charge',\n",
+       " 'BToKEE_l_xy_unc',\n",
+       " 'BToKEE_mll_fullfit',\n",
+       " 'ProbeTracks_vy',\n",
+       " 'BToKMuMu_minDR',\n",
+       " 'BToKEE_mass',\n",
+       " 'HLT_Mu9_IP4',\n",
+       " 'fixedGridRhoFastjetCentralChargedPileUp',\n",
+       " 'HLT_Mu8p5_IP3p5',\n",
+       " 'TriggerMuon_charge',\n",
+       " 'BToKMuMu_charge',\n",
+       " 'SV_ndof',\n",
+       " 'L1_SingleMu9er1p5',\n",
+       " 'BToKMuMu_cos2D',\n",
+       " 'BToKMuMu_pt',\n",
+       " 'BToKEE_l_xy',\n",
+       " 'nTrigObj',\n",
+       " 'ProbeTracks_dz',\n",
+       " 'PV_y',\n",
+       " 'Electron_dz',\n",
+       " 'BToKMuMu_fit_cos2D',\n",
+       " 'L1_SingleMu12er1p5',\n",
+       " 'Electron_vx',\n",
+       " 'Muon_tightId',\n",
+       " 'Electron_eta',\n",
+       " 'L1_SingleMu10er1p5',\n",
+       " 'BToKEE_svprob',\n",
+       " 'HLT_Mu9_IP6',\n",
+       " 'Muon_tkIsoId',\n",
+       " 'Muon_ptErr',\n",
+       " 'ProbeTracks_vz',\n",
+       " 'BToKEE_pt',\n",
+       " 'SV_x',\n",
+       " 'BToKEE_minDR',\n",
+       " 'BToKMuMu_fit_pt',\n",
+       " 'Muon_vx',\n",
+       " 'SV_mass',\n",
+       " 'Electron_r9',\n",
+       " 'Electron_ptBiased',\n",
+       " 'Muon_mvaId',\n",
+       " 'Electron_isLowPt',\n",
+       " 'HLT_Mu9_IP5',\n",
+       " 'Muon_mass',\n",
+       " 'BToKEE_eta',\n",
+       " 'Electron_dxyErr',\n",
+       " 'nProbeTracks',\n",
+       " 'TrigObj_l1charge',\n",
+       " 'BToKEE_kIdx',\n",
+       " 'Electron_convVeto',\n",
+       " 'Muon_dxy',\n",
+       " 'Muon_tightCharge',\n",
+       " 'Muon_pfRelIso04_all',\n",
+       " 'TriggerMuon_mass',\n",
+       " 'TrigObj_eta',\n",
+       " 'Electron_sip3d',\n",
+       " 'fixedGridRhoFastjetCentral',\n",
+       " 'SV_y',\n",
+       " 'PV_npvs',\n",
+       " 'BToKEE_fit_eta',\n",
+       " 'Muon_highPtId',\n",
+       " 'Muon_vz',\n",
+       " 'Muon_nStations',\n",
+       " 'BToKEE_cos2D',\n",
+       " 'Muon_miniIsoId',\n",
+       " 'BToKEE_fit_mass',\n",
+       " 'Muon_dz',\n",
+       " 'ProbeTracks_isMatchedToEle',\n",
+       " 'ProbeTracks_pt',\n",
+       " 'PV_z',\n",
+       " 'BToKEE_fit_phi',\n",
+       " 'TrigObj_l1pt',\n",
+       " 'ProbeTracks_pdgId',\n",
+       " 'Electron_charge',\n",
+       " 'BToKEE_phi',\n",
+       " 'BToKMuMu_l_xy',\n",
+       " 'Electron_mass',\n",
+       " 'SV_eta',\n",
+       " 'SV_phi',\n",
+       " 'Electron_hoe',\n",
+       " 'TrigObj_l1pt_2',\n",
+       " 'Muon_charge',\n",
+       " 'nOtherPV',\n",
+       " 'PV_score',\n",
+       " 'BToKEE_maxDR',\n",
+       " 'Muon_inTimeMuon',\n",
+       " 'SV_chi2',\n",
+       " 'luminosityBlock',\n",
+       " 'Electron_sieie',\n",
+       " 'BToKEE_chi2',\n",
+       " 'Muon_pt',\n",
+       " 'fixedGridRhoFastjetCentralNeutral',\n",
+       " 'Muon_dzErr',\n",
+       " 'ProbeTracks_mass',\n",
+       " 'Electron_isPFoverlap',\n",
+       " 'Electron_mvaId',\n",
+       " 'Electron_pdgId',\n",
+       " 'PV_npvsGood',\n",
+       " 'BToKMuMu_eta',\n",
+       " 'BToKMuMu_svprob',\n",
+       " 'HLT_Mu7_IP4',\n",
+       " 'BToKMuMu_l_xy_unc',\n",
+       " 'BToKMuMu_mass',\n",
+       " 'nBToKMuMu',\n",
+       " 'Electron_lostHits',\n",
+       " 'Muon_segmentComp',\n",
+       " 'ProbeTracks_dxy',\n",
+       " 'HLT_Mu8_IP5',\n",
+       " 'Muon_softId',\n",
+       " 'L1_SingleMu7er1p5',\n",
+       " 'Electron_vz',\n",
+       " 'TrigObj_phi',\n",
+       " 'BToKMuMu_kIdx',\n",
+       " 'BToKEE_fit_cos2D',\n",
+       " 'Electron_fBrem',\n",
+       " 'ProbeTracks_isMatchedToMuon',\n",
+       " 'ProbeTracks_isPacked',\n",
+       " 'ProbeTracks_isMatchedToMediumMuon',\n",
+       " 'BToKEE_l1Idx',\n",
+       " 'BToKMuMu_maxDR',\n",
+       " 'nSV',\n",
+       " 'nElectron',\n",
+       " 'Electron_deltaEtaSC',\n",
+       " 'Electron_dzErr',\n",
+       " 'TriggerMuon_vz',\n",
+       " 'BToKMuMu_phi',\n",
+       " 'ProbeTracks_dzS',\n",
+       " 'BToKMuMu_l2Idx',\n",
+       " 'BToKMuMu_pdgId',\n",
+       " 'event',\n",
+       " 'PV_ndof',\n",
+       " 'BToKMuMu_chi2',\n",
+       " 'Muon_eta',\n",
+       " 'Muon_softMvaId',\n",
+       " 'Muon_multiIsoId',\n",
+       " 'Electron_pt',\n",
+       " 'BToKEE_fit_pt',\n",
+       " 'BToKEE_mll_raw',\n",
+       " 'ProbeTracks_dxyS',\n",
+       " 'Muon_sip3d',\n",
+       " 'HLT_Mu12_IP6',\n",
+       " 'Muon_isPFcand',\n",
+       " 'ProbeTracks_DCASig',\n",
+       " 'TrigObj_pt',\n",
+       " 'ProbeTracks_phi',\n",
+       " 'SV_z',\n",
+       " 'BToKEE_mll_llfit',\n",
+       " 'TriggerMuon_eta',\n",
+       " 'ProbeTracks_isMatchedToLooseMuon',\n",
+       " 'Electron_tightCharge',\n",
+       " 'Muon_isGlobal',\n",
+       " 'fixedGridRhoFastjetCentralCalo',\n",
+       " 'nBToKEE',\n",
+       " 'TriggerMuon_vx',\n",
+       " 'BToKMuMu_fit_mass',\n",
+       " 'HLT_Mu8_IP6',\n",
+       " 'nMuon',\n",
+       " 'OtherPV_z',\n",
+       " 'TrigObj_filterBits',\n",
+       " 'HLT_Mu8_IP3',\n",
+       " 'Muon_mediumPromptId',\n",
+       " 'Muon_vy',\n",
+       " 'TriggerMuon_vy',\n",
+       " 'TriggerMuon_phi',\n",
+       " 'Electron_ip3d',\n",
+       " 'PV_chi2',\n",
+       " 'L1_SingleMu8er1p5',\n",
+       " 'Muon_pfRelIso03_chg',\n",
+       " 'Muon_isTracker',\n",
+       " 'SV_pAngle']"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nf.keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['dxy',\n",
+       " 'vy',\n",
+       " 'isPF',\n",
+       " 'unBiased',\n",
+       " 'dz',\n",
+       " 'vx',\n",
+       " 'r9',\n",
+       " 'ptBiased',\n",
+       " 'isLowPt',\n",
+       " 'dxyErr',\n",
+       " 'convVeto',\n",
+       " 'sip3d',\n",
+       " 'charge',\n",
+       " 'hoe',\n",
+       " 'sieie',\n",
+       " 'isPFoverlap',\n",
+       " 'mvaId',\n",
+       " 'pdgId',\n",
+       " 'lostHits',\n",
+       " 'vz',\n",
+       " 'fBrem',\n",
+       " 'deltaEtaSC',\n",
+       " 'dzErr',\n",
+       " 'tightCharge',\n",
+       " 'ip3d',\n",
+       " 'p4',\n",
+       " '__fast_pt',\n",
+       " '__fast_eta',\n",
+       " '__fast_phi',\n",
+       " '__fast_mass']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "electrons.columns"
    ]
   },
   {
@@ -515,7 +903,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
